--- a/core/view/ticket/view.jade
+++ b/core/view/ticket/view.jade
@@ -34,11 +34,11 @@ block main
           button(disabled).btn.btn-lg.btn-primary 已关闭
         else
           button.btn.btn-lg.btn-primary#reply-btn(type='submit')= t('ticket.create_reply')
-          button.btn.btn-lg.btn-danger#close-btn= t('ticket.close_ticket')
+          button(type='button').btn.btn-lg.btn-danger#close-btn= t('ticket.close_ticket')
         if mAccount.inGroup(account, 'root') && (ticket.status == 'open' || ticket.status == 'pending')
-          button.btn.btn-lg.btn-success#finish-btn= t('ticket.finish_ticket')
+          button(type='button').btn.btn-lg.btn-success#finish-btn= t('ticket.finish_ticket')
         if mAccount.inGroup(account, 'root') && ticket.status == 'closed'
-          button.btn.btn-lg.btn-success#reopen-btn= t('ticket.reopen_ticket')
+          button(type='button').btn.btn-lg.btn-success#reopen-btn= t('ticket.reopen_ticket')
 
 prepend sidebar
   .row
