实时显示 bitcoin 汇率

--- a/core/view/panel/pay.jade
+++ b/core/view/panel/pay.jade
@@ -10,8 +10,8 @@ block main
     div
       h2 比特币
       p 你可以直接向该地址发送比特币。在经过一次确认后，系统会实时地，自动为你折算使用时间。
-      p 实时汇率：10 CNY = 0.004 BTC
-      pre.bg-success 13v2BTCMZMHg5v87susgg86HFZqXERuwUd
+      p 实时汇率：10 CNY = #{(exchange_rate * 10).toFixed(4)} BTC
+      pre.bg-success= account.attribute.bitcoin_deposit_address
 
     div
       h2 淘宝
