--- a/plugin/linux/view/widget.jade
+++ b/plugin/linux/view/widget.jade
@@ -2,12 +2,12 @@ header Linux
 table.table.table-hover
   tbody
     tr
-      td(style='width: 200px;') 2 小时 CPU 时间
+      td(style='width: 200px;') 一小时 CPU 时间
       td
         .progress
-          .progress-bar.progress-bar-success(role='progressbar', aria-valuenow='20', aria-valuemin='0', aria-valuemax='100', style='width: 20%;') 58 / 288 s
+          .progress-bar.progress-bar-success(role='progressbar', aria-valuenow='20', aria-valuemin='0', aria-valuemax='100', style='width: 20%;') 58 / 144 s
     tr
-      td 2 小时内存占用
+      td 一小时内存占用
       td
         .progress
           .progress-bar.progress-bar-success(role='progressbar', aria-valuenow='85', aria-valuemin='0', aria-valuemax='100', style='width: 85%;') 23 / 27 M
