--- a/core/view/account/signup.jade
+++ b/core/view/account/signup.jade
@@ -15,13 +15,13 @@ block main
       .col-sm-5
         input#email.form-control(type='email', name='email', required)
     .form-group
-      label.col-sm-2.col-md-offset-1.control-label(for='passwd')= t('account.passwd')
+      label.col-sm-2.col-md-offset-1.control-label(for='password')= t('account.password')
       .col-sm-5
-        input#passwd.form-control(type='password', name='passwd', required)
+        input#password.form-control(type='password', name='password', required)
     .form-group
-      label.col-sm-2.col-md-offset-1.control-label(for='passwd2')= t('view.account.passwd2')
+      label.col-sm-2.col-md-offset-1.control-label(for='password2')= t('view.account.password2')
       .col-sm-5
-        input#passwd2.form-control(type='password', name='passwd2', required)
+        input#password2.form-control(type='password', name='password2', required)
     .form-group
       .col-sm-offset-3
         button.signup-btn.btn.btn-lg.btn-primary(type='submit')= t('account.signup')
