--- a/core/view/account/login.jade
+++ b/core/view/account/login.jade
@@ -11,9 +11,9 @@ block main
       .col-sm-5
         input#username.form-control(type='text', name='username', required)
     .form-group
-      label.col-sm-2.col-md-offset-1.control-label(for='passwd')= t('account.passwd')
+      label.col-sm-2.col-md-offset-1.control-label(for='password')= t('account.password')
       .col-sm-5
-        input#passwd.form-control(type='password', name='passwd', required)
+        input#password.form-control(type='password', name='password', required)
     .form-group
       .col-sm-offset-3
         button#login-btn.btn.btn-lg.btn-primary(type='submit')= t('account.login')
