--- a/core/view/panel.jade
+++ b/core/view/panel.jade
@@ -50,7 +50,7 @@ block content
 
         #service-switch.row
           header 服务开关
-          for name in plugin.switchButton
+          for name in switch_buttons
             if account.attribute.plugin[name].is_enable
               button(data-name= name).btn.btn-danger 关闭 #{t('plugins.' + name + '.name')}
             else
