--- a/plugin/ssh/view/widget.jade
+++ b/plugin/ssh/view/widget.jade
@@ -12,7 +12,7 @@ header SSH
   table(style= 'table-layout: fixed;').table.table-hover
     thead
       tr
-        td(style= 'width: 250px;') 进程名
+        td(style= 'width: 250px;') 进程
         td 内存
         td CPU
         td 操作
