--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     block head
-      link(rel='stylesheet', href='http://cdn.staticfile.org/twitter-bootstrap/3.1.1/css/bootstrap.min.css')
+      link(rel='stylesheet', href='http://cdn.staticfile.org/twitter-bootstrap/3.2.0/css/bootstrap.min.css')
       link(rel='stylesheet', href='/style/layout.css')
   body
     header.navbar-fixed-top
@@ -58,8 +58,15 @@ html
                 p= t('app.description')
 
     #footer
+      script.
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-49193300-2', 'auto');
+        ga('send', 'pageview');
       script(src='http://cdn.staticfile.org/jquery/2.0.3/jquery.min.js')
-      script(src='http://cdn.staticfile.org/twitter-bootstrap/3.1.1/js/bootstrap.min.js')
+      script(src='http://cdn.staticfile.org/twitter-bootstrap/3.2.0/js/bootstrap.min.js')
       script(src='/script/base/ErrorHandle.js')
       script(src='/script/layout/layout.js')
       block footer
