--- a/core/view/index.jade
+++ b/core/view/index.jade
@@ -22,7 +22,7 @@ block content
           li
             code print('Python')
           li
-            code fmt.Println("Golang")
+            code fmt.Println('Golang')
           li
             code echo 'PHP';
 
