--- a/core/view/panel.jade
+++ b/core/view/panel.jade
@@ -48,13 +48,14 @@ block content
                     else
                       button.btn.btn-success.btn-sm= t('plan.subscribe')
 
-        #service-switch.row
-          header 服务开关
-          for name in switch_buttons
-            if account.attribute.plugin[name].is_enable
-              button(data-name= name).btn.btn-danger 关闭 #{t('plugins.' + name + '.name')}
-            else
-              button(data-name= name).btn.btn-success 开启 #{t('plugins.' + name + '.name')}
+        if switch_buttons.length
+          #service-switch.row
+            header 服务开关
+            for name in switch_buttons
+              if account.attribute.plugin[name].is_enable
+                button(data-name= name).btn.btn-danger 关闭 #{t('plugins.' + name + '.name')}
+              else
+                button(data-name= name).btn.btn-success 开启 #{t('plugins.' + name + '.name')}
 
         for widget in widgets
           .row
