--- a/plugin/ssh/view/widget.jade
+++ b/plugin/ssh/view/widget.jade
@@ -23,4 +23,4 @@ header SSH
           td #{(process.rss / 1024).toFixed(1)}M
           td #{process.cpu_per}%
           td
-            button.btn.btn-danger.btn-xs Kill
+            button.btn-kill.btn.btn-danger.btn-xs Kill
