给 JSON 编辑框换一个等宽字体

--- a/core/static/style/panel.less
+++ b/core/static/style/panel.less
@@ -39,3 +39,10 @@ td {
 .btn {
   margin-right: 5px;
 }
+
+#json {
+  textarea {
+    font-family: Menlo, Monaco, Consolas, 'Courier New', monospace;
+    font-size: 16px;
+  }
+}
