--- a/core/static/style/panel.less
+++ b/core/static/style/panel.less
@@ -46,3 +46,14 @@ td {
     font-size: 16px;
   }
 }
+
+.progress {
+  position: relative;
+}
+
+.progress span {
+  position: absolute;
+  display: block;
+  width: 100%;
+  color: black;
+}
