--- a/plugin/linux/view/widget.jade
+++ b/plugin/linux/view/widget.jade
@@ -5,19 +5,23 @@ table.table.table-hover
       td(style='width: 200px;') 一小时 CPU 时间
       td
         .progress
-          .progress-bar.progress-bar-success(role='progressbar', aria-valuenow='20', aria-valuemin='0', aria-valuemax='100', style='width: 20%;') 58 / 144 s
+          .progress-bar.progress-bar-success(role='progressbar', aria-valuenow='#{(resources_usage.cpu / account.attribute.resources_limit.cpu * 100).toFixed()}', aria-valuemin='0', aria-valuemax='100', style='width: #{(resources_usage.cpu / account.attribute.resources_limit.cpu * 100).toFixed()}%;')
+            span #{resources_usage.cpu.toFixed(1)} / #{account.attribute.resources_limit.cpu} s
     tr
       td 一小时内存占用
       td
         .progress
-          .progress-bar.progress-bar-success(role='progressbar', aria-valuenow='85', aria-valuemin='0', aria-valuemax='100', style='width: 85%;') 23 / 27 M
+          .progress-bar.progress-bar-success(role='progressbar', aria-valuenow='#{(resources_usage.memory / account.attribute.resources_limit.memory * 100).toFixed()}', aria-valuemin='0', aria-valuemax='100', style='min-width: 30px; width: #{(resources_usage.memory / account.attribute.resources_limit.memory * 100).toFixed()}%;')
+            span #{resources_usage.memory.toFixed(1)} / #{account.attribute.resources_limit.memory} M
     tr
       td 储存空间
       td
         .progress
-          .progress-bar.progress-bar-success(role='progressbar', aria-valuenow='10', aria-valuemin='0', aria-valuemax='100', style='width: 10%;') 52 / 520 M
+          .progress-bar.progress-bar-success(role='progressbar', aria-valuenow='0', aria-valuemin='0', aria-valuemax='100', style='width: 0%;')
+            span 0 / #{account.attribute.resources_limit.storage} M
     tr
       td 月流量
       td
         .progress
-          .progress-bar.progress-bar-success(role='progressbar', aria-valuenow='10', aria-valuemin='0', aria-valuemax='100', style='width: 10%;') 4 / 39G
+          .progress-bar.progress-bar-success(role='progressbar', aria-valuenow='0', aria-valuemin='0', aria-valuemax='100', style='width: 0%;')
+            span 0 / #{account.attribute.resources_limit.transfer} G
