--- a/plugin/mongodb/view/widget.jade
+++ b/plugin/mongodb/view/widget.jade
@@ -5,7 +5,7 @@ header MongoDB
       h3.panel-title 新建数据库
     .panel-body
       .input-group#mongodb-create
-        input.form-control(value='jysperm_')
+        input.form-control(value='#{account.username}_')
         span.input-group-btn
           button.btn.btn-default(type='button') 提交
   .panel.panel-warning
@@ -16,7 +16,6 @@ header MongoDB
         input.form-control(type='password')
         span.input-group-btn
           button.btn.btn-default(type='button') 提交
-
 .col-md-6
   table(style= 'table-layout: fixed;').table.table-hover
     thead
@@ -25,9 +24,10 @@ header MongoDB
         td 体积
         td
     tbody
-      tr
-        td(style= 'white-space: nowrap; overflow: hidden;', title= 'jysperm_test') jysperm_test
-        td 10M
-        td
-          button.nginx-remove-btn.btn.btn-danger.btn-xs
-            span.glyphicon.glyphicon-remove-sign
+      for db in dbs
+        tr(data-name= db.name)
+          td(style= 'white-space: nowrap; overflow: hidden;', title= db.name)= db.name
+          td #{(db.sizeOnDisk / 1024 / 1024).toFixed(1)}M
+          td
+            button.nginx-remove-btn.btn.btn-danger.btn-xs
+              span.glyphicon.glyphicon-remove-sign
