nginx 向导模式雏形

--- a/core/static/style/panel.less
+++ b/core/static/style/panel.less
@@ -40,7 +40,7 @@ td {
   margin-right: 5px;
 }
 
-#json {
+#nginx-type-json {
   textarea {
     font-family: Menlo, Monaco, Consolas, 'Courier New', monospace;
     font-size: 16px;
@@ -56,4 +56,19 @@ td {
   display: block;
   width: 100%;
   color: black;
+}
+
+.tab-pane p {
+  margin: 15px;
+}
+
+.tab-pane {
+  padding-top: 15px;
+}
+
+@media (min-width: 768px) {
+  .modal-dialog {
+    width: 800px;
+    margin: 80px auto;
+  }
 }
