--- a/plugin/mongodb/view/widget.jade
+++ b/plugin/mongodb/view/widget.jade
@@ -22,7 +22,7 @@ header MongoDB
     thead
       tr
         td(style= 'width: 200px;') 数据库
-        td 体积
+        td 磁盘占用
         td
     tbody
       for db in dbs
