nginx 修改配置，未完成

--- a/plugin/nginx/view/widget.jade
+++ b/plugin/nginx/view/widget.jade
@@ -89,4 +89,4 @@ table.table.table-hover
             p 即将支持
       .modal-footer
         button.btn.btn-danger(type='button', data-dismiss='modal') 关闭
-        button.btn.btn-success#nginxSave(type='button') 保存
+        button.btn.btn-success(type='button') 保存
