移动 static script

--- a/core/view/admin/index.jade
+++ b/core/view/admin/index.jade
@@ -60,4 +60,4 @@ prepend sidebar
     a.btn.btn-lg.btn-success(href='/admin/ticket/')= t('ticket.ticket_list')
 
 append footer
-  script(src='/script/admin/index.js')
+  script(src='/script/admin.js')
