--- a/core/view/panel.jade
+++ b/core/view/panel.jade
@@ -62,4 +62,4 @@ block content
             != widget.html
 
 append footer
-  script(src='/script/panel/panel.js')
+  script(src='/script/panel.js')
