--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -68,5 +68,5 @@ html
       script(src='http://cdn.staticfile.org/jquery/2.0.3/jquery.min.js')
       script(src='http://cdn.staticfile.org/twitter-bootstrap/3.2.0/js/bootstrap.min.js')
       script(src='/script/base/ErrorHandle.js')
-      script(src='/script/layout/layout.js')
+      script(src='/script/layout.js')
       block footer
