将前端 JS 移到插件目录

--- a/plugin/nginx/view/widget.jade
+++ b/plugin/nginx/view/widget.jade
@@ -45,7 +45,7 @@ table.table.table-hover
               .form-group.option-server-name
                 label.col-sm-2.control-label 域名
                 .col-sm-10
-                  input.form-control(type='text', placeholder='example.com example.net')
+                  input.form-control(type='text', required, placeholder='example.com example.net')
 
               h3 类型
               .form-group.option-type
