--- a/plugin/nginx/view/widget.jade
+++ b/plugin/nginx/view/widget.jade
@@ -13,9 +13,9 @@ table.table.table-hover
         td= site.server_name.join(', ')
         td root: ~#{site.root.match(/\/home\/[^\/]+(.*)/)[1]}
         td(style= 'width: 150px;')
-          button.nginx-edit-btn.btn.btn-info.btn-xs
+          button.btn.btn-info.btn-xs
             span.glyphicon.glyphicon-edit
-          button.nginx-remove-btn.btn.btn-danger.btn-xs
+          button.btn.btn-danger.btn-xs
             span.glyphicon.glyphicon-remove-sign
 
 .modal.fade#nginx-modal(tabindex='-1', role='dialog', aria-hidden='true', aria-labelledby='nginx-modal-label')
