--- a/plugin/mysql/view/widget.jade
+++ b/plugin/mysql/view/widget.jade
@@ -4,7 +4,7 @@ header MySQL
     .panel-heading
        h3.panel-title 设置 MySQL 密码
     .panel-body
-      .input-group#mysql-input
+      .input-group.update-password
         input.form-control(type='password')
         span.input-group-btn
           button.btn.btn-default(type='button') 提交
