--- a/plugin/ssh/view/widget.jade
+++ b/plugin/ssh/view/widget.jade
@@ -4,7 +4,7 @@ header SSH
     .panel-heading
        h3.panel-title 设置 SSH 密码
     .panel-body
-      .input-group#ssh-input
+      .input-group.update-password
         input.form-control(type='password')
         span.input-group-btn
           button.btn.btn-default(type='button') 提交
