重构前端 JS 逻辑

--- a/core/view/account/login.jade
+++ b/core/view/account/login.jade
@@ -16,7 +16,7 @@ block main
         input#password.form-control(type='password', name='password', required)
     .form-group
       .col-sm-offset-3
-        button#login-btn.btn.btn-lg.btn-primary(type='submit')= t('account.login')
+        button.action-login.btn.btn-lg.btn-primary(type='button')= t('account.login')
 
 prepend sidebar
   .row
