--- a/core/view/account/signup.jade
+++ b/core/view/account/signup.jade
@@ -24,7 +24,7 @@ block main
         input#password2.form-control(type='password', name='password2', required)
     .form-group
       .col-sm-offset-3
-        button.signup-btn.btn.btn-lg.btn-primary(type='submit')= t('account.signup')
+        button.action-signup.btn.btn-lg.btn-primary(type='button')= t('account.signup')
 
 prepend sidebar
   .row
