--- a/core/view/ticket/create.jade
+++ b/core/view/ticket/create.jade
@@ -15,8 +15,9 @@ block main
       .col-sm-9
         input#title.form-control(type='text', name='title', required)
     .form-group.padding
-      textarea#ticket-content.form-control(name='content', rows='15', required)
+      textarea#content.form-control(name='content', rows='15', required)
     .form-group.padding
-      button.btn.btn-lg.btn-primary#create-ticket(type='submit')= t('ticket.create')
+      button.btn.btn-lg.btn-primary.action-create(type='button')= t('ticket.create')
+
 append footer
   script(src='/script/ticket/create.js')
