--- a/core/view/admin/index.jade
+++ b/core/view/admin/index.jade
@@ -5,8 +5,31 @@ prepend head
 
 block main
   header= t('admin.admin_panel')
+  table.table.table-hover
+    thead
+      tr
+        th= t('account.username')
+        th= t('account.email')
+        th 套餐
+        th 余额
+        th 操作
+    tbody
+      for account in accounts
+        tr(data-id='#{account._id}')
+          td= account.username
+          td= account.email
+          td= account.attribute.plans.join(', ')
+          td= account.attribute.balance.toFixed(2)
+          td
+            .btn-group
+              button(type='button', data-toggle='dropdown').btn.btn-info.btn-sm.dropdown-toggle
+                | 操作 &nbsp;
+                span.caret
+              ul.dropdown-menu
+                li
+                  a.action-create-payment(href='#') 创建充值记录
 
-  .modal.fade#crate_payment_modal
+  #create-payment-modal.modal.fade
     .modal-dialog
       .modal-content
         .modal-header
@@ -29,31 +52,7 @@ block main
 
         .modal-footer
           button.btn.btn-danger(type='button', data-dismiss='modal') 关闭
-          button.btn.btn-success#create_payment_button(type='button') 创建
-
-  table.table.table-hover
-    thead
-      tr
-        th= t('account.username')
-        th= t('account.email')
-        th 套餐
-        th 余额
-        th 操作
-    tbody
-      for account in accounts
-        tr(data-id='#{account._id}')
-          td= account.username
-          td= account.email
-          td= account.attribute.plans.join(', ')
-          td= account.attribute.balance.toFixed(2)
-          td
-            .btn-group
-              button(type='button', data-toggle='dropdown').btn.btn-info.btn-sm.dropdown-toggle
-                | 操作
-                spann.caret
-              ul.dropdown-menu
-                li
-                  a.create-payment(href='#') 创建充值记录
+          button.btn.btn-success.action-create-payment(type='button') 创建
 
 prepend sidebar
   .row
