--- a/core/view/ticket/list.jade
+++ b/core/view/ticket/list.jade
@@ -53,4 +53,4 @@ prepend sidebar
     if tickets
       a.btn.btn-lg.btn-success(href='/ticket/create/')= t('ticket.create_ticket')
     else
-      a.btn.btn-lg.btn-success(href='/admin/ticket/')= t('ticket.create_ticket')
+      a.btn.btn-lg.btn-success(href='/admin/ticket/')= 工单列表
