管理员面板，禁用站点

--- a/core/view/admin/index.jade
+++ b/core/view/admin/index.jade
@@ -52,7 +52,10 @@ block main
                   span.caret
                 ul.dropdown-menu
                   li
-                    a(href='#') 禁用
+                    if site.is_enable
+                      a.action-disable-site(href='#') 禁用
+                    else
+                      a.action-enable-site(href='#') 启用
 
   #create-payment-modal.modal.fade
     .modal-dialog
